# Click2Cart-Pipeline

./: .gitignore  README.md  db_load.py  pyproject.toml
airflow/: airflow.cfg  airflow.db  reset-airflow.sh  simple_auth_manager_passwords.json.generated
airflow/dags/: dag.py
airflow/tasks/: dump_rds.py  load_into_snowflake.py  run_dbt.py  stream_to_kinesis.py  test_conditions.py
data/: CLICK2CART.DEV.DIM_PRODUCTS.csv  CLICK2CART.DEV.DIM_USERS.csv  CLICK2CART.DEV.FACT_CLICKSTREAMS.csv  CLICK2CART.DEV.FACT_ORDERS.csv
snowflake_dbt/: dbt_project.yml  load_data.sql
snowflake_dbt/macros/: tests.sql
snowflake_dbt/models/: schema.yml
snowflake_dbt/models/marts/: dim_products.sql  dim_users.sql  fact_clickstreams.sql  fact_orders.sql
snowflake_dbt/models/staging/: src_clickstreams.sql  src_orders.sql  src_products.sql  src_users.sql
snowflake_dbt/snapshots/: products_snaphot.sql  users_snaphot.sql
snowflake_dbt/tests/: tests.sql
terraform/: main.tf  outputs.tf
terraform/modules/Kinesis/: main.tf  variables.tf
terraform/modules/RDS/: main.tf
terraform/modules/S3/: main.tf  outputs.tf  variables.tf
terraform/modules/SNS/: main.tf  outputs.tf  variables.tf
