[project]
name = "click2cart-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow[amazon]>=3.0.6",
    "apache-airflow-providers-postgres>=6.2.3",
    "dbt-snowflake>=1.10.0",
    "uvicorn==0.29.0",
]
